--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,14 +63,14 @@ packages = [
 ]
 
 [tool.scikit-build]
-wheel.packages = ["llama_cpp"]
+wheel.packages = ["llama_cpp", "stable_diffusion_cpp"]
 cmake.verbose = true
 cmake.args = [
     "-DLLAVA_BUILD=off"
 ]
 cmake.minimum-version = "3.21"
 minimum-version = "0.5.1"
-sdist.include = [".git", "CMakeLists.txt", "dependency/llama.cpp/*"]
+sdist.include = [".git", "CMakeLists.txt", "dependency/llama.cpp/*", "dependency/stable_diffusion_cpp.cpp/*"]
 
 
 [tool.pytest.ini_options]
