--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/ggerganov/llama.cpp
 [submodule "dependency/stable-diffusion.cpp"]
 	path = dependency/stable-diffusion.cpp
-	url = git@github.com:xyyimian/stable-diffusion.cpp.git
+	url = https://github.com/NexaAI/stable-diffusion.cpp
