--- a/.github/workflows/build-wheels-cuda-linux.yaml
+++ b/.github/workflows/build-wheels-cuda-linux.yaml
@@ -1,4 +1,4 @@
-name: Build Wheels (CUDA)
+name: Build Wheels (CUDA) (Linux)
 
 on:
   workflow_dispatch:
@@ -25,7 +25,7 @@ jobs:
         id: set-matrix
         run: |
           $matrix = @{
-              'os' = @('ubuntu-20.04', 'windows-2019')
+              'os' = @('ubuntu-20.04')
               'pyver' = @("3.9", "3.10", "3.11", "3.12")
               'cuda' = @("12.1.1", "12.2.2", "12.3.2", "12.4.1")
               'releasetag' = @("basic")
