--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "tqdm",
     "tabulate",
     "faster_whisper",
+    "prompt_toolkit",
 ]
 requires-python = ">=3.7"
 classifiers = [
