--- a/.github/workflows/build-wheels-cuda-win.yaml
+++ b/.github/workflows/build-wheels-cuda-win.yaml
@@ -1,11 +1,6 @@
 name: Build Wheels (CUDA) (Windows)
 
-on:
-  workflow_dispatch:
-
-  pull_request:
-    branches:
-      - main
+on: workflow_dispatch
 
 permissions:
   contents: write
@@ -23,6 +18,7 @@ jobs:
     steps:
       - name: Define Job Output
         id: set-matrix
+        # here 'Windows' is a large runner
         run: |
           $matrix = @{
               'os' = @('Windows')
@@ -118,7 +114,7 @@ jobs:
             $env:LD_LIBRARY_PATH = $env:CONDA_PREFIX + '/lib:' + $env:LD_LIBRARY_PATH
           }
           $env:VERBOSE = '1'
-          $env:CMAKE_ARGS = '-DGGML_CUDA=ON -DCMAKE_CUDA_ARCHITECTURES=all'
+          $env:CMAKE_ARGS = '-DGGML_CUDA=ON -DCMAKE_CUDA_ARCHITECTURES=all -DSD_CUBLAS=ON'
           $env:CMAKE_ARGS = "-DGGML_CUDA_FORCE_MMQ=ON $env:CMAKE_ARGS"
 
           $env:CMAKE_ARGS = $env:CMAKE_ARGS + ' -DGGML_AVX2=OFF -DGGML_FMA=OFF -DGGML_F16C=OFF'
