--- a/.github/workflows/build-wheels-cuda-linux.yaml
+++ b/.github/workflows/build-wheels-cuda-linux.yaml
@@ -21,8 +21,8 @@ jobs:
         run: |
           $matrix = @{
               'os' = @('ubuntu-20.04')
-              'pyver' = @("3.9", "3.10", "3.11", "3.12")
-              'cuda' = @("12.1.1", "12.2.2", "12.3.2", "12.4.1")
+              'pyver' = @("3.10", "3.11", "3.12")
+              'cuda' = @("12.4.1")
               'releasetag' = @("basic")
           }
 
