--- a/.github/workflows/build-wheels-cpu.yaml
+++ b/.github/workflows/build-wheels-cpu.yaml
@@ -27,7 +27,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install -e .
+          # python -m pip install -e .
+          python -m pip install build wheel
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.20.0
@@ -68,7 +69,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install -e .
+          # python -m pip install -e .
+          python -m pip install build wheel
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.20.0
@@ -107,7 +109,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install -e .
+          # python -m pip install -e .
+          python -m pip install build wheel
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.20.0
