--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ build
 wheel
 twine
 
+faster_whisper
+
 # For ggml
 typing-extensions>=4.5.0
 numpy>=1.20.0
@@ -20,5 +22,6 @@ prompt_toolkit
 # Shared dependencies
 tqdm
 importlib-metadata>=1.4.0,<7.0
+prompt_toolkit
 tabulate
 streamlit
