enable corrrect dependencies

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/NexaAI/stable-diffusion.cpp
 [submodule "dependency/llama.cpp"]
 	path = dependency/llama.cpp
-	url = git@github.com:NexaAI/llama.cpp.git
+	url = https://github.com/NexaAI/llama.cpp.git
