--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,6 +78,20 @@ wheel.packages = [
 ]
 build.verbose = true
 cmake.build-type = "Release"
+wheel.packages = [
+    "nexa",
+    "nexa.cli",
+    "nexa.gguf",
+    "nexa.gguf.llama",
+    "nexa.gguf.sd",
+    "nexa.gguf.streamlit",
+    "nexa.gguf.server",
+    "nexa.onnx",
+    "nexa.onnx.streamlit",
+    "nexa.onnx.server"
+]
+build.verbose = true
+cmake.build-type = "Release"
 cmake.minimum-version = "3.16"
 sdist.include = [".git", "CMakeLists.txt ", "dependency/llama.cpp/*", "dependency/stable-diffusion.cpp/*"]
 
