--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,14 @@
 [build-system]
-requires = ["scikit-build-core[pyproject]>=0.9.2"]
+requires = ["scikit-build-core"]
 build-backend = "scikit_build_core.build"
 
 [project]
 name = "nexaai"
-version = "0.0.0.dev1"
+version = "0.0.1.dev"
 description = "Nexa AI SDK"
 readme = "README.md"
 license = { text = "MIT" }
 authors = [{ name = "Nexa AI", email = "octopus@nexa4ai.com" }]
-requires-python = ">=3.8"
 dependencies = [
     "faster_whisper",
     "typing-extensions>=4.5.0",  # For ggml
@@ -66,10 +65,22 @@ nexaai = "nexa.cli.entry:main"
 nexai = "nexa.cli.entry:main"
 
 [tool.scikit-build]
-wheel.packages = ["llama_cpp", "stable_diffusion_cpp"]
-cmake.verbose = true
+wheel.packages = [
+    "nexa",
+    "nexa.cli",
+    "nexa.gguf",
+    "nexa.gguf.llama",
+    "nexa.gguf.sd",
+    "nexa.gguf.streamlit",
+    "nexa.gguf.server",
+    "nexa.onnx",
+    "nexa.onnx.streamlit",
+    "nexa.onnx.server"
+]
+build.verbose = true
+cmake.build-type = "Release"
 cmake.minimum-version = "3.16"
-sdist.include = [".git", "dependency/llama.cpp/*", "dependency/stable-diffusion.cpp/*"]
+sdist.include = [".git", "CMakeLists.txt ", "dependency/llama.cpp/*", "dependency/stable-diffusion.cpp/*"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
