--- a/tomls/pyproject_metal.toml
+++ b/tomls/pyproject_metal.toml
@@ -4,7 +4,7 @@ build-backend = "scikit_build_core.build"
 
 [project]
 name = "nexaai-gpu"
-version = "0.0.1.dev"
+version = "0.0.1"
 description = "Nexa AI SDK"
 readme = "README.md"
 license = { text = "MIT" }
