--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,10 +28,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install build pytest
+        python -m pip install numpy --upgrade
+        python -m pip install build pytest
     - name: Build DLL
       run: |
-        pip install -e .
+        python -m pip install -e .
     - name: Run tests
       run: |
         python -m pytest tests
