--- a/tomls/pyproject_cuda.toml
+++ b/tomls/pyproject_cuda.toml
@@ -81,9 +81,13 @@ build.verbose = true
 cmake.build-type = "Release"
 cmake.version = ">=3.16"
 cmake.args = [
-    "-DGGML_CUDA=ON -DSD_CUBLAS=ON -DCMAKE_CUDA_ARCHITECTURES=all",
+    "-DGGML_CUDA=ON",
+    "-DSD_CUBLAS=ON",
+    "-DCMAKE_CUDA_ARCHITECTURES=all",
     "-DGGML_CUDA_FORCE_MMQ=ON",
-    "-DGGML_AVX2=OFF -DGGML_FMA=OFF -DGGML_F16C=OFF",
+    "-DGGML_AVX2=OFF",
+    "-DGGML_FMA=OFF",
+    "-DGGML_F16C=OFF"
 ]
 
 [tool.pytest.ini_options]
