--- a/tomls/pyproject_metal.toml
+++ b/tomls/pyproject_metal.toml
@@ -81,8 +81,10 @@ build.verbose = true
 cmake.build-type = "Release"
 cmake.version = ">=3.16"
 cmake.args = [
-    "-DGGML_METAL=ON -DSD_METAL=ON",
-    "-DCMAKE_OSX_ARCHITECTURES=arm64 -DCMAKE_APPLE_SILICON_PROCESSOR=arm64",
+    "-DGGML_METAL=ON"
+    "-DSD_METAL=ON",
+    "-DCMAKE_OSX_ARCHITECTURES=arm64",
+    "-DCMAKE_APPLE_SILICON_PROCESSOR=arm64"
 ]
 
 [tool.pytest.ini_options]
