--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "scikit_build_core.build"
 
 [project]
 name = "nexaai"
-version = "0.0.2.dev"
+version = "0.0.5"
 description = "Nexa AI SDK"
 readme = "README.md"
 license = { text = "MIT" }
@@ -16,8 +16,6 @@ dependencies = [
     "diskcache>=5.6.1",
     "jinja2>=2.11.3",
     "librosa>=0.8.0",
-    "boto3>=1.34.148",
-    "botocore>=1.34.148",
     "fastapi",
     "uvicorn",
     "pydantic",
@@ -38,7 +36,7 @@ classifiers = [
 [project.optional-dependencies]
 onnx = [
     "librosa",
-    "optimum[onnxruntime]>=1.7.3",  # for CPU version
+    "optimum[onnxruntime]",  # for CPU version
     "diffusers",  # required for image generation
     "optuna",
     "pydantic",
