--- a/.github/workflows/build-wheels-cuda-win.yaml
+++ b/.github/workflows/build-wheels-cuda-win.yaml
@@ -115,7 +115,8 @@ jobs:
           }
           $env:VERBOSE = '1'
 
-          cp tomls/pyproject_cuda.toml pyproject.toml
+          $env:CMAKE_ARGS = '-DSD_CUBLAS=ON -DGGML_CUDA=ON -DCMAKE_CUDA_ARCHITECTURES=all'
+          $env:CMAKE_ARGS = $env:CMAKE_ARGS + ' -DGGML_CUDA_FORCE_MMQ=ON -DGGML_AVX2=OFF -DGGML_FMA=OFF -DGGML_F16C=OFF'
           $env:CMAKE_BUILD_PARALLEL_LEVEL = $(nproc)
 
           python -m build --wheel
