--- a/requirements.txt
+++ b/requirements.txt
@@ -12,16 +12,13 @@ numpy>=1.20.0
 diskcache>=5.6.1
 jinja2>=2.11.3
 librosa>=0.8.0
-boto3>=1.34.148
-botocore>=1.34.148
 fastapi
 uvicorn
 pydantic
 pillow
-prompt_toolkit
 
 # For onnx
-optimum[onnxruntime]>=1.7.3  # for CPU version
+optimum[onnxruntime]  # for CPU version
 diffusers  # required for image generation
 optuna
 PyYAML
@@ -33,7 +30,7 @@ transformers
 ttstokenizer
 
 # Shared dependencies
+prompt_toolkit
 tqdm
-importlib-metadata>=1.4.0,<7.0
 tabulate
 streamlit
