--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,7 +78,7 @@ sdist.exclude = [".github", "build", "dist", "nexa.egg-info", "dependency/llama.
 build.verbose = true
 cmake.build-type = "Release"
 cmake.version = ">=3.16"
-cmake.args = ["-DCMAKE_CXX_FLAGS=-fopenmp"]
+# cmake.args = ["-DCMAKE_CXX_FLAGS=-fopenmp"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
