made sure this can pass build

--- a/.github/workflows/build-wheels-cpu-macos.yaml
+++ b/.github/workflows/build-wheels-cpu-macos.yaml
@@ -1,11 +1,6 @@
 name: Build Wheels (CPU) (MacOS)
 
-on:
-  workflow_dispatch:
-
-  pull_request:
-    branches:
-      - main
+on: workflow_dispatch
 
 permissions:
   contents: write
