--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,28 +10,37 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [macos-latest, windows-latest]
+        python-version: [3.10]
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
       with:
         submodules: recursive  # This will clone the repository with all its submodules
-        fetch-depth: 0    # This fetches all history so you can access any version of the submodules
-
+        fetch-depth: 0  # This fetches all history so you can access any version of the submodules
 
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'  # Specify the Python version you want
+        python-version: ${{ matrix.python-version }}
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         python -m pip install build pytest
+      shell: bash
+
     - name: Build DLL
       run: |
         python -m pip install -e .
+      shell: bash
+
     - name: Run tests
       run: |
         python -m pytest tests
+      shell: bash
