--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, windows-latest]
-        python-version: [3.10]
+        python-version: ["3.10"]
 
     steps:
     - name: Checkout code
@@ -25,7 +25,7 @@ jobs:
         fetch-depth: 0  # This fetches all history so you can access any version of the submodules
 
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
 
