--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,7 +78,8 @@ sdist.exclude = [".github", "build", "dist", "nexa.egg-info", "dependency/llama.
 build.verbose = true
 cmake.build-type = "Release"
 cmake.version = ">=3.16"
-# cmake.args = ["-DCMAKE_CXX_FLAGS=-fopenmp","-DCMAKE_BUILD_PARALLEL_LEVEL=16"]
+# cmake.args = ["-DCMAKE_CXX_FLAGS=-fopenmp"] # for macOS with Intel Silicon
+cmake.args = ["-DCMAKE_BUILD_PARALLEL_LEVEL=16"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
