--- a/.github/workflows/build-wheels-cpu.yaml
+++ b/.github/workflows/build-wheels-cpu.yaml
@@ -6,47 +6,47 @@ permissions:
   contents: write
 
 jobs:
-  build_wheels_linux:
-    name: Build wheels on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-20.04]
+  # build_wheels_linux:
+  #   name: Build wheels on ${{ matrix.os }}
+  #   runs-on: ${{ matrix.os }}
+  #   strategy:
+  #     matrix:
+  #       os: [ubuntu-20.04]
 
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: "recursive"
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #       with:
+  #         submodules: "recursive"
 
-      # Used to host cibuildwheel
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.8"
-          cache: "pip"
+  #     # Used to host cibuildwheel
+  #     - uses: actions/setup-python@v5
+  #       with:
+  #         python-version: "3.8"
+  #         cache: "pip"
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          # python -m pip install -e .
-          python -m pip install build wheel
+  #     - name: Install dependencies
+  #       run: |
+  #         python -m pip install --upgrade pip
+  #         # python -m pip install -e .
+  #         python -m pip install build wheel
 
-      - name: Build wheels
-        uses: pypa/cibuildwheel@v2.20.0
-        env:
-          # disable repair
-          CIBW_REPAIR_WHEEL_COMMAND: ""
-          CIBW_BUILD_FRONTEND: "build"
-          CIBW_SKIP: "*musllinux*"
-          CIBW_BUILD: "cp310-* cp311-* cp312-*"
-          CMAKE_BUILD_PARALLEL_LEVEL: 4
-        with:
-          package-dir: .
-          output-dir: wheelhouse
+  #     - name: Build wheels
+  #       uses: pypa/cibuildwheel@v2.20.0
+  #       env:
+  #         # disable repair
+  #         CIBW_REPAIR_WHEEL_COMMAND: ""
+  #         CIBW_BUILD_FRONTEND: "build"
+  #         CIBW_SKIP: "*musllinux*"
+  #         CIBW_BUILD: "cp310-* cp311-* cp312-*"
+  #         CMAKE_BUILD_PARALLEL_LEVEL: 4
+  #       with:
+  #         package-dir: .
+  #         output-dir: wheelhouse
 
-      - uses: actions/upload-artifact@v4
-        with:
-          name: wheels-${{ matrix.os }}
-          path: ./wheelhouse/*.whl
+  #     - uses: actions/upload-artifact@v4
+  #       with:
+  #         name: wheels-${{ matrix.os }}
+  #         path: ./wheelhouse/*.whl
 
   build_wheels_win:
     name: Build wheels on ${{ matrix.os }}
@@ -146,7 +146,7 @@ jobs:
 
   release:
     name: Release
-    needs: [build_wheels_linux, build_wheels_win, build_wheels_arm64, build_sdist]
+    needs: [build_wheels_win, build_wheels_arm64, build_sdist]  # build_wheels_linux
     runs-on: ubuntu-latest
 
     steps:
