--- a/.github/workflows/build-wheels-cpu.yaml
+++ b/.github/workflows/build-wheels-cpu.yaml
@@ -37,7 +37,7 @@ jobs:
   #         CIBW_REPAIR_WHEEL_COMMAND: ""
   #         CIBW_BUILD_FRONTEND: "build"
   #         CIBW_SKIP: "*musllinux*"
-  #         CIBW_BUILD: "cp310-* cp311-* cp312-*"
+  #         CIBW_BUILD: "cp37-* cp38-* cp39-* cp310-* cp311-* cp312-*"
   #         CMAKE_BUILD_PARALLEL_LEVEL: 4
   #       with:
   #         package-dir: .
@@ -79,7 +79,7 @@ jobs:
           # disable repair
           CIBW_REPAIR_WHEEL_COMMAND: ""
           CIBW_BUILD_FRONTEND: "build"
-          CIBW_BUILD: "cp310-* cp311-* cp312-*"
+          CIBW_BUILD: "cp37-* cp38-* cp39-* cp310-* cp311-* cp312-*"
           CMAKE_BUILD_PARALLEL_LEVEL: 16
         with:
           package-dir: .
@@ -110,7 +110,7 @@ jobs:
           CIBW_BUILD_FRONTEND: "build"
           CIBW_SKIP: "*musllinux* pp*"
           CIBW_ARCHS: "aarch64"
-          CIBW_BUILD: "cp310-* cp311-* cp312-*"
+          CIBW_BUILD: "cp37-* cp38-* cp39-* cp310-* cp311-* cp312-*"
           CMAKE_BUILD_PARALLEL_LEVEL: $(nproc)
         with:
           output-dir: wheelhouse
