--- a/.github/workflows/generate-index-from-release.yaml
+++ b/.github/workflows/generate-index-from-release.yaml
@@ -3,7 +3,7 @@ name: Wheels Index
 on:
   # Trigger on new release
   workflow_run:
-    workflows: ["Release", "Build Wheels (CUDA)", "Build Wheels (Metal)"]
+    workflows: ["Release", "Build Wheels (CUDA)", "Build Wheels (Metal)", "Build Wheels (ROCm)"]
     types:
       - completed
 
@@ -47,6 +47,7 @@ jobs:
           # ./scripts/releases-to-pep-503.sh index/whl/cu123 '^[v]?[0-9]+\.[0-9]+\.[0-9]+(\.[0-9]+)?-cu123$'
           ./scripts/releases-to-pep-503.sh index/whl/cu124 '^[v]?[0-9]+\.[0-9]+\.[0-9]+(\.[0-9]+)?-cu124$'
           ./scripts/releases-to-pep-503.sh index/whl/metal '^[v]?[0-9]+\.[0-9]+\.[0-9]+(\.[0-9]+)?-metal$'
+          ./scripts/releases-to-pep-503.sh index/whl/rocm602 '^[v]?[0-9]+\.[0-9]+\.[0-9]+(\.[0-9]+)?-rocm602$'
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
