--- a/.github/workflows/build-wheels-rocm-linux.yaml
+++ b/.github/workflows/build-wheels-rocm-linux.yaml
@@ -21,7 +21,7 @@ jobs:
         run: |
           $matrix = @{
               'os' = @('ubuntu-22.04')
-              'pyver' = @("3.10", "3.11", "3.12")
+              'pyver' = @("3.7", "3.8", "3.9", "3.10", "3.11", "3.12")
               'rocm' = @("6.0.2")
               'releasetag' = @("basic")
           }
