added prebuilt wheels when installing nexaai

--- a/.github/workflows/build-cpu-executable.yaml
+++ b/.github/workflows/build-cpu-executable.yaml
@@ -55,7 +55,7 @@ jobs:
     #     touch dependency/llama.cpp/examples/llava/CMakeLists.txt
 
     - name: Install nexaai
-      run: pip install -e .
+      run: pip install -e . --verbose --prefer-binary --index-url https://nexaai.github.io/nexa-sdk/whl/cpu --extra-index-url https://pypi.org/simple --no-cache-dir
 
     - name: Extract version
       run: |
