--- a/.github/workflows/build-cpu-executable.yaml
+++ b/.github/workflows/build-cpu-executable.yaml
@@ -10,6 +10,7 @@ jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [3.11]
@@ -44,15 +45,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pyinstaller wheel setuptools scikit-build-core
-
-    # - name: Prepare build environment
-    #   run: |
-    #     mkdir -p dependency/stable-diffusion.cpp
-    #     mkdir -p dependency/llama.cpp
-    #     mkdir -p dependency/llama.cpp/examples/llava
-    #     touch dependency/stable-diffusion.cpp/CMakeLists.txt
-    #     touch dependency/llama.cpp/CMakeLists.txt
-    #     touch dependency/llama.cpp/examples/llava/CMakeLists.txt
 
     - name: Install nexaai
       run: pip install -e . --verbose --prefer-binary --index-url https://nexaai.github.io/nexa-sdk/whl/cpu --extra-index-url https://pypi.org/simple --no-cache-dir
