--- a/.github/workflows/build-cpu-executable.yaml
+++ b/.github/workflows/build-cpu-executable.yaml
@@ -12,7 +12,6 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # os: [ubuntu-latest, macos-latest, windows-latest]
         os: [windows-latest]
         python-version: [3.11]
 
@@ -54,15 +53,14 @@ jobs:
       if: runner.os == 'Windows'
       shell: pwsh
       run: |
-        $VERSION = python -c "import re; print(re.search(r'__version__\s*=\s*[''""](.*?)[''""']', open('nexa/__init__.py').read()).group(1))"
-        echo "VERSION=$VERSION" >> $env:GITHUB_ENV
-
-    - name: Extract version (Windows)
-      if: runner.os == 'Windows'
-      shell: pwsh
-      run: |
         $VERSION = python -c "import re; print(re.search(r'^__version__\s*=\s*[''\""]([^''\""]*)[''\""']', open('nexa/__init__.py').read()).group(1))"
         echo "VERSION=$VERSION" >> $env:GITHUB_ENV
+
+    - name: Extract version (Unix)
+      if: runner.os != 'Windows'
+      run: |
+        VERSION=$(python -c "import re; print(re.search(r'__version__\s*=\s*[\'\"](.*?)[\'\"]', open('nexa/__init__.py').read()).group(1))")
+        echo "VERSION=$VERSION" >> $GITHUB_ENV
 
     - name: Build with PyInstaller
       run: pyinstaller entry.spec
