--- a/.github/workflows/build-cpu-executable.yaml
+++ b/.github/workflows/build-cpu-executable.yaml
@@ -49,17 +49,30 @@ jobs:
     - name: Install nexaai
       run: pip install -e . --verbose --prefer-binary --index-url https://nexaai.github.io/nexa-sdk/whl/cpu --extra-index-url https://pypi.org/simple --no-cache-dir
 
+    - name: Create version extraction script
+      run: |
+        echo "import re
+        import sys
+        with open('nexa/__init__.py', 'r') as f:
+            content = f.read()
+        match = re.search(r'^__version__\s*=\s*[\'\"']([^\'\""]*)[\'\"']', content, re.MULTILINE)
+        if match:
+            print(match.group(1))
+        else:
+            print('Version not found', file=sys.stderr)
+            sys.exit(1)" > extract_version.py
+
     - name: Extract version (Windows)
       if: runner.os == 'Windows'
       shell: pwsh
       run: |
-        $VERSION = python -c "import re; print(re.search(r'^__version__\s*=\s*[''\""]([^''\""]*)[''\""']', open('nexa/__init__.py').read()).group(1))"
+        $VERSION = python extract_version.py
         echo "VERSION=$VERSION" >> $env:GITHUB_ENV
 
     - name: Extract version (Unix)
       if: runner.os != 'Windows'
       run: |
-        VERSION=$(python -c "import re; print(re.search(r'__version__\s*=\s*[\'\"](.*?)[\'\"]', open('nexa/__init__.py').read()).group(1))")
+        VERSION=$(python extract_version.py)
         echo "VERSION=$VERSION" >> $GITHUB_ENV
 
     - name: Build with PyInstaller
